# mnist-test

./: pyproject.toml
