[tool.poetry]
name = "mnist-test"
version = "0.1.0"
description = ""
authors = ["tighug <tighug.4696@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
